refactor: add new village functionality