@@ -9,6 +9,7 @@ import org.springframework.boot.CommandLineRunner;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 
+import java.math.BigDecimal;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.Map;
@@ -29,29 +30,48 @@ public class TemplateConfig {
                 VillageTemplate village = new VillageTemplate(
                         VillageType.SIX,
                         Arrays.asList(
-                                new Field(0, Resource.CROP, 0, 10,
+                                new Field(0, Resource.CROP, 0, BigDecimal.TEN,
                                         Map.of(
-                                                Resource.CROP, 10,
-                                                Resource.CLAY, 10,
-                                                Resource.IRON, 10,
-                                                Resource.TIME, 30),
+                                                Resource.CROP, BigDecimal.TEN,
+                                                Resource.CLAY, BigDecimal.TEN,
+                                                Resource.IRON, BigDecimal.TEN,
+                                                Resource.TIME, BigDecimal.TEN),
                                         false, false),
-                                new Field(1, Resource.CROP, 0, 10,
+                                new Field(1, Resource.CROP, 0, BigDecimal.TEN,
                                         Map.of(
-                                                Resource.CROP, 10,
-                                                Resource.CLAY, 10,
-                                                Resource.IRON, 10,
-                                                Resource.TIME, 30),
+                                                Resource.CROP, BigDecimal.TEN,
+                                                Resource.CLAY, BigDecimal.TEN,
+                                                Resource.IRON, BigDecimal.TEN,
+                                                Resource.TIME, BigDecimal.TEN),
                                         false, false),
-                                new Field(2, Resource.CLAY, 0, 10,
+                                new Field(2, Resource.CLAY, 0, BigDecimal.TEN,
                                         Map.of(
-                                                Resource.CROP, 10,
-                                                Resource.CLAY, 10,
-                                                Resource.IRON, 10,
-                                                Resource.TIME, 30),
+                                                Resource.CROP, BigDecimal.TEN,
+                                                Resource.CLAY, BigDecimal.TEN,
+                                                Resource.IRON, BigDecimal.TEN,
+                                                Resource.TIME, BigDecimal.TEN),
+                                        false, false),
+                                new Field(2, Resource.WOOD, 0, BigDecimal.TEN,
+                                        Map.of(
+                                                Resource.CROP, BigDecimal.TEN,
+                                                Resource.CLAY, BigDecimal.TEN,
+                                                Resource.IRON, BigDecimal.TEN,
+                                                Resource.TIME, BigDecimal.TEN),
+                                        false, false),
+                                new Field(2, Resource.IRON, 0, BigDecimal.TEN,
+                                        Map.of(
+                                                Resource.CROP, BigDecimal.TEN,
+                                                Resource.CLAY, BigDecimal.TEN,
+                                                Resource.IRON, BigDecimal.TEN,
+                                                Resource.TIME, BigDecimal.TEN),
                                         false, false)
                         ),
-                        Collections.emptyMap());
+                        Collections.emptyMap(), Map.of(
+                                Resource.CROP, BigDecimal.valueOf(750),
+                                Resource.CLAY, BigDecimal.valueOf(750),
+                                Resource.IRON, BigDecimal.valueOf(750),
+                                Resource.WOOD, BigDecimal.valueOf(750)
+                        ));
 
                 villageTemplatesRepo.save(village);
             }
